<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="www.alkaiyat.ahmad.net.ahmadalkaiyats.SignupFragement">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvFirstName"
                android:id="@+id/tvFirstName" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:id="@+id/etFirstName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvLastName"
                android:id="@+id/tvLastName" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:id="@+id/etLastName" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvusername"
                android:id="@+id/tvUserName" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:id="@+id/etUsername" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvEmailAddress"
                android:id="@+id/tvEmailAddress" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="textEmailAddress"
                android:id="@+id/etEmailAddress" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvpassword"
                android:id="@+id/tvPassword" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_marginBottom="10dp"
                android:id="@+id/etPassword" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvPhoneNumber"
                android:id="@+id/tvPhoneNumber" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="phone"
                android:id="@+id/etPhoneNumber" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvCountry"
                android:id="@+id/tvCountry" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:id="@+id/etCountry" />

            <Button
                android:id="@+id/bSignup"
                android:text="@string/BSignup"
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:textAllCaps="false"
                android:layout_height="wrap_content" />
        </TableLayout>
    </ScrollView>

</LinearLayout>
