<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_shop_contact_us"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="www.alkaiyat.ahmad.net.ahmadalkaiyats.shopsDetails.ShopContactUs"
    tools:showIn="@layout/activity_shop_contact_us">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <EditText
            android:id="@+id/ContactUsName"
            android:hint="@string/feedbackname"
            android:inputType="textPersonName"
            android:paddingTop="16dp"
            android:background="@drawable/text_shape_drawable"
            android:textSize="@dimen/Edit_text_enter"
            android:gravity="top|left"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4.50dp"
            android:layout_marginLeft="05.50dp"
            android:layout_marginRight="05.50dp"
            android:padding="8.00dp"
            android:textColorHint="@color/starNormalColor"
            >
        </EditText>

        <EditText
            android:id="@+id/ContactPhoneNumber"
            android:hint="@string/feedbacknumber"
            android:inputType="phone"
            android:paddingTop="16dp"
            android:background="@drawable/text_shape_drawable"
            android:textSize="@dimen/Edit_text_enter"
            android:gravity="top|left"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4.50dp"
            android:layout_marginLeft="05.50dp"
            android:layout_marginRight="05.50dp"
            android:padding="8.00dp"
            android:textColorHint="@color/starNormalColor"
            >
        </EditText>

        <EditText
            android:id="@+id/ContactUsEmail"
            android:hint="@string/feedbackemail"
            android:inputType="textEmailAddress"
            android:background="@drawable/text_shape_drawable"
            android:textSize="@dimen/Edit_text_enter"
            android:gravity="top|left"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4.50dp"
            android:layout_marginLeft="05.50dp"
            android:layout_marginRight="05.50dp"
            android:padding="8.00dp"
            android:textColorHint="@color/starNormalColor"
            >
        </EditText>

        <EditText
            android:id="@+id/ContactUsFeedbackBody"
            android:hint="@string/feedbackbody"
            android:inputType="textMultiLine"
            android:lines="5"
            android:background="@drawable/text_shape_drawable"
            android:textSize="@dimen/Edit_text_enter"
            android:gravity="top|left"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4.50dp"
            android:layout_marginLeft="05.50dp"
            android:layout_marginRight="05.50dp"
            android:padding="8.00dp"
            android:textColorHint="@color/starNormalColor"
            >
        </EditText>
        <LinearLayout
            android:id="@+id/signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_signup"
            android:paddingBottom="2.5dp"
            android:paddingTop="2.5dp">

            <TextView
                android:id="@+id/ContactUsSendButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lines="1"
                android:padding="12dp"
                android:text="Send Feedbabk"
                android:textColor="@color/white"
                android:textSize="@dimen/text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Call "
                android:textColor="@color/stroke"
                android:textSize="@dimen/card_text" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00962776801503"
                android:inputType="phone"
                android:textStyle="bold"
                android:textColor="@color/green"
                android:id="@+id/ContactUsPhoneNumberTV"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Email "
                android:textColor="@color/stroke"
                android:textSize="@dimen/card_text" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ahmad.5ya6@gmail.com"
                android:inputType="textEmailAddress"
                android:textStyle="bold"
                android:textColor="@color/green"
                android:id="@+id/ContactUsEmailAddressTV"/>
        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>
